@@ -7,9 +7,8 @@ import java.util.List;
 import java.util.Map;
 import java.util.TreeMap;
 import java.util.stream.Collectors;
-/**
- * Клас, представляващ услуги свързани със студентите.
- */
+
+/** Клас, представляващ услуги свързани със студентите. */
 public class StudentService {
   private final StudentRepository studentRepository;
 
@@ -20,10 +19,10 @@ public class StudentService {
   /**
    * Записва студент в първи курс.
    *
-   * @param name     име на студента
-   * @param program  програма, в която се записва студента
-   * @param group    група на студента
-   * @param fn       факултетен номер на студента
+   * @param name име на студента
+   * @param program програма, в която се записва студента
+   * @param group група на студента
+   * @param fn факултетен номер на студента
    */
   public void enrollStudent(String name, Program program, int group, String fn) {
     Student student = new Student();
@@ -81,9 +80,9 @@ public class StudentService {
   /**
    * Променя стойността на определена характеристика на студент.
    *
-   * @param fn     факултетен номер на студента
+   * @param fn факултетен номер на студента
    * @param option опция за промяна
-   * @param value  нова стойност
+   * @param value нова стойност
    */
   public void change(String fn, String option, String value) {
     Student student = studentRepository.findByFacultyNumber(fn);
@@ -97,55 +96,65 @@ public class StudentService {
     }
 
     switch (option.toLowerCase()) {
-      case "group":
-        student.setGroup(Integer.parseInt(value));
-        System.out.println("Student's group has been changed.");
-        break;
-
-      case "year":
+      case "group" -> changeGroup(student, Integer.parseInt(value));
+      case "year" -> {
         if (Integer.parseInt(value) != student.getCurrentYear() + 1) {
           System.out.println("Can only advance to the next year.");
           return;
         }
-        for (Course course : student.getCourseList()) {
-          if (course.getDiscipline().getYear().equals(student.getCurrentYear())
-              && course.getDiscipline().getIsMandatory()
-              && !isCourseSuccessfullyCompleted(course)) {
-            System.out.println(
-                "The student has not successfully completed all mandatory disciplines of the current year.");
-            return;
-          }
-        }
-        student.setCurrentYear(student.getCurrentYear() + 1);
-        System.out.println("The student has been advanced to the next year.");
-        break;
-
-      case "program":
-        Program newProgram = Program.valueOf(value.toUpperCase());
-        for (Discipline discipline : newProgram.getDisciplines()) {
-          if (discipline.getYear() <= student.getCurrentYear() && discipline.getIsMandatory()) {
-            boolean hasCourse = false;
-            for (Course course : student.getCourseList()) {
-              if (course.getDiscipline() == discipline && isCourseSuccessfullyCompleted(course)) {
-                hasCourse = true;
-                break;
-              }
-            }
-            if (!hasCourse) {
-              System.out.println(
-                  "The student has not successfully completed all mandatory disciplines for the new program.");
-              return;
-            }
-          }
-        }
-        student.setProgram(newProgram);
-        System.out.println("The student's program has been changed.");
-        break;
-
-      default:
-        System.out.println("Invalid option.");
-        break;
+        advance(student.getFacultyNumber());
+      }
+      case "program" -> {
+        if (doesProgramExist(value.toUpperCase())) {
+          Program newProgram = Program.valueOf(value.toUpperCase());
+          changeProgram(student, newProgram);
+        } else System.out.println("Invalid program input");
+      }
+      default -> System.out.println("Invalid option.");
     }
+  }
+  private boolean doesProgramExist(String value){
+    for (Program p : Program.values()) {
+      if (p.name().equals(value.toUpperCase())) {
+        return true;
+      }
+    }
+    return false;
+  }
+
+  /**
+   * @param student студент
+   * @param value номер на новата група
+   */
+  private void changeGroup(Student student, int value) {
+    student.setGroup(value);
+    System.out.println("Student's group has been changed.");
+  }
+
+  /**
+   * @param student студент
+   * @param program нова специалност
+   */
+  private void changeProgram(Student student, Program program) {
+
+    for (Discipline discipline : program.getDisciplines()) {
+      if (discipline.getYear() <= student.getCurrentYear() && discipline.getIsMandatory()) {
+        boolean hasCourse = false;
+        for (Course course : student.getCourseList()) {
+          if (course.getDiscipline() == discipline && isCourseSuccessfullyCompleted(course)) {
+            hasCourse = true;
+            break;
+          }
+        }
+        if (!hasCourse) {
+          System.out.println(
+              "The student has not successfully completed all mandatory disciplines for the new program.");
+          return;
+        }
+      }
+    }
+    student.setProgram(program);
+    System.out.println("The student's program has been changed.");
   }
   /**
    * Променя статуса на студента на завършил.
@@ -193,17 +202,16 @@ public class StudentService {
    *
    * @param fn факултетен номер на студента
    */
-  public void resume(String fn){
+  public void resume(String fn) {
     Student student = studentRepository.findByFacultyNumber(fn);
     if (student == null) {
       System.out.println("No student found with this faculty number.");
       return;
     }
-    if(student.getStatus() == Status.DROPOUT){
+    if (student.getStatus() == Status.DROPOUT) {
       student.setStatus(Status.ACTIVE);
       System.out.println("Student rights successfully regained.");
-    }
-    else {
+    } else {
       System.out.println("Student has not dropped out.");
     }
   }
@@ -235,7 +243,7 @@ public class StudentService {
    * Извежда справка за всички студенти от дадена програма и година.
    *
    * @param programName име на програмата
-   * @param year        година
+   * @param year година
    */
   public void printAll(String programName, int year) {
     List<Student> students = studentRepository.findByProgramAndCurrentYear(programName, year);
@@ -253,7 +261,8 @@ public class StudentService {
       System.out.println("Courses:");
       for (Course course : student.getCourseList()) {
         System.out.println("  Course: " + course.getDiscipline().getName());
-        System.out.println("  Grade: " + (course.isGraded() ? course.getGrade() : "Not graded yet"));
+        System.out.println(
+            "  Grade: " + (course.isGraded() ? course.getGrade() : "Not graded yet"));
       }
       System.out.println("-----");
     }
@@ -261,8 +270,8 @@ public class StudentService {
   /**
    * Записва студент в даден курс.
    *
-   * @param fn              факултетен номер на студента
-   * @param disciplineName  име на дисциплината
+   * @param fn факултетен номер на студента
+   * @param disciplineName име на дисциплината
    */
   public void enrollIn(String fn, String disciplineName) {
     Student student = studentRepository.findByFacultyNumber(fn);
@@ -281,7 +290,7 @@ public class StudentService {
 
     // Проверка дали дисциплината е от съответната специалност и курс
     if (!student.getProgram().getDisciplines().contains(discipline)
-            || !discipline.getYear().equals(student.getCurrentYear())) {
+        || !discipline.getYear().equals(student.getCurrentYear())) {
       System.out.println("The student cannot enroll in this discipline.");
       return;
     }
@@ -302,9 +311,9 @@ public class StudentService {
   /**
    * Добавя оценка за дадена дисциплина на студент.
    *
-   * @param fn              факултетен номер на студента
-   * @param disciplineName  име на дисциплината
-   * @param grade           оценка
+   * @param fn факултетен номер на студента
+   * @param disciplineName име на дисциплината
+   * @param grade оценка
    */
   public void addGrade(String fn, String disciplineName, double grade) {
     // Намиране на студента по факултетен номер
@@ -324,7 +333,8 @@ public class StudentService {
     }
 
     // Намиране на дисциплината в списъка с дисциплини на студента
-    Course course = student.getCourseList().stream()
+    Course course =
+        student.getCourseList().stream()
             .filter(c -> c.getDiscipline() == discipline)
             .findFirst()
             .orElse(null);
@@ -363,30 +373,35 @@ public class StudentService {
     List<Student> students = studentRepository.findAll();
 
     // Филтриране на студентите, които са записани за дадената дисциплина
-    List<Student> enrolledStudents = students.stream()
-            .filter(student -> student.getCourseList().stream()
-                    .anyMatch(course -> course.getDiscipline() == discipline && course.isEnrolled()))
-            .collect(Collectors.toList());
-
+    List<Student> enrolledStudents =
+        students.stream()
+            .filter(
+                student ->
+                    student.getCourseList().stream()
+                        .anyMatch(
+                            course -> course.getDiscipline() == discipline && course.isEnrolled()))
+            .toList();
 
     // Групиране на студентите по специалност и курс
-    Map<Program, Map<Integer, List<Student>>> groupedStudents = enrolledStudents.stream()
-            .collect(Collectors.groupingBy(
+    Map<Program, Map<Integer, List<Student>>> groupedStudents =
+        enrolledStudents.stream()
+            .collect(
+                Collectors.groupingBy(
                     Student::getProgram,
                     TreeMap::new,
                     Collectors.groupingBy(
-                            Student::getCurrentYear,
-                            TreeMap::new,
-                            Collectors.toList())));
+                        Student::getCurrentYear, TreeMap::new, Collectors.toList())));
 
     // Извеждане на протоколите
-    groupedStudents.forEach((program, byYear) -> {
-      System.out.println("Program: " + program);
-      byYear.forEach((year, studentList) -> {
-        System.out.println("Year: " + year);
-        studentList.forEach(student -> System.out.println("Student: " + student.getName()));
-      });
-    });
+    groupedStudents.forEach(
+        (program, byYear) -> {
+          System.out.println("Program: " + program);
+          byYear.forEach(
+              (year, studentList) -> {
+                System.out.println("Year: " + year);
+                studentList.forEach(student -> System.out.println("Student: " + student.getName()));
+              });
+        });
   }
   /**
    * Извежда отчет за студент.
@@ -405,7 +420,8 @@ public class StudentService {
     int gradedCoursesCount = 0;
     List<Discipline> ungradedCourses = new ArrayList<>();
 
-    System.out.println("Student report for " + student.getName() + "(" + student.getFacultyNumber() + ")");
+    System.out.println(
+        "Student report for " + student.getName() + "(" + student.getFacultyNumber() + ")");
     System.out.println("Completed courses:");
 
     for (Course course : enrolledCourses) {
